[package]
name = "epos-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.0"
quick-xml = { version = "0.31.0", features = ["serialize", "serde-types"] }
anyhow = "1.0.75"
reqwest = "0.11.22"
tokio = { version = "1.35.0", features = ["full"] }
simple_logger = "4.3.0"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
thiserror = "1.0.51"
tokio-test = "0.4.3"